--- a/widget.ui
+++ b/widget.ui
@@ -47,7 +47,7 @@
   <widget class="QPushButton" name="base64Encode">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>330</x>
      <y>20</y>
      <width>211</width>
      <height>31</height>
@@ -101,6 +101,19 @@
    </property>
    <property name="text">
     <string>&lt;span text-align=&quot;center&quot;&gt;选择图片或拖拽至此&lt;/span&gt;</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="encodeFromClipboard">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>20</y>
+     <width>181</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>从剪切板读取并转换</string>
    </property>
   </widget>
  </widget>
